<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.trackerforce.splitmate.ui.dashboard.fragments.DashboardFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/dash_fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.trackerforce.splitmate.ui.fragment.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/app_fragment_account" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.trackerforce.splitmate.ui.fragment.SettingsFragment"
        android:label="@string/titleSettings"
        tools:layout="@layout/app_fragment_settings" />

</navigation>